# groupyr

./: .buildinfo  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  .zenodo.json  CHANGES.rst  LICENSE  Makefile  README.md  README.rst  RELEASE.rst  api.html  appveyor.yml  contributing.html  environment.yml  faq.html  genindex.html  getting_help.html  index.html  install.html  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini  user_guide.html
.github/: CONTRIBUTING.md  config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation_improvement.md  feature_request.md  other_issue.md
.github/workflows/: docbuild.yml  publish-to-test-pypi.yml  test.yml
.maintenance/: publish_release.sh  update_zenodo.py
_downloads/084669b45b226af6f637ab8457c8c5aa/: plot_classifier.py
_downloads/75ca586a247cac0a4a45a084c46c7995/: plot_regressor.ipynb
_downloads/820f06491b99db07374c6e4ab13d581f/: plot_sgl_path.ipynb
_downloads/a094bafb8ae454005fa6e7badecaf816/: plot_balanced_classifier.ipynb
_downloads/a78b256341f96d2bfb204c8f36b44ec2/: compare_group_lasso_performance.ipynb
_downloads/fed3e85cac62fc93e088aa8cb008d467/: plot_classifier.ipynb
_modules/: index.html
_modules/groupyr/: datasets.html  logistic.html  sgl.html  transform.html
_sources/: faq.rst.txt  getting_help.rst.txt  index.rst.txt  install.rst.txt  user_guide.rst.txt
_sources/auto_examples/: compare_group_lasso_performance.rst.txt  index.rst.txt  plot_balanced_classifier.rst.txt  plot_classifier.rst.txt  plot_regressor.rst.txt  plot_sgl_path.rst.txt  sg_execution_times.rst.txt
_static/: documentation_options.js
_static/css/: groupyr.css
auto_examples/: compare_group_lasso_performance.html  index.html  plot_balanced_classifier.html  plot_classifier.html  plot_regressor.html  plot_sgl_path.html  sg_execution_times.html
doc/: Makefile  api.rst  conf.py  contributing.rst  faq.rst  index.rst  install.rst  quick_start.rst
examples/: README.txt  compare_group_lasso_performance.py  plot_balanced_classifier.py  plot_classifier.py  plot_regressor.py  plot_sgl_path.py  plot_template.py  plot_transformer.py
groupyr/: __init__.py  _base.py  _prox.py  datasets.py  decomposition.py  logistic.py  sgl.py  transform.py  utils.py
groupyr/_copt/: __init__.py  loss.py  proximal_gradient.py  utils.py
groupyr/_copt/tests/: test_proximal_gradient.py
groupyr/tests/: test_common.py  test_datasets.py  test_decomposition.py  test_prox.py  test_sgl.py  test_transform.py  test_utils.py
paper/: paper.bib  paper.md
sglpy/: __init__.py  _prox.py  logistic.py  sgl.py  utils.py
sglpy/tests/: test_common.py  test_datasets.py  test_prox.py  test_sgl.py  test_template.py
skltemplate/: _template.py
