[aliases]
test = pytest

[tool:pytest]
addopts = --doctest-modules

[metadata]
name = groupyr
url = https://richford.github.io/groupyr
download_url = https://github.com/richford/groupyr
author = Adam Richie-Halford
author_email = richiehalford@gmail.com
maintainer = Adam Richie-Halford
maintainer_email = richiehalford@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering

license = BSD License
description = groupyr: Sparse Groups Lasso in Python
long_description = file:README.md
long_description_content_type = text/markdown
platforms = OS Independent

[options]
setup_requires =
  setuptools_scm
python_requires = >=3.6
install_requires =
    copt==0.8.4
    matplotlib==3.3.0
    numpy==1.19.1
    scikit-learn==0.23.2
    scipy==1.5.2
    scikit-optimize==0.8.1
    tqdm==4.48.2
zip_safe = False
include_package_data = True
packages = find:

[options.extras_require]
dev =
    black==20.8b1
    flake8==3.8.3
    numpydoc==1.1.0
    pre-commit==2.7.1
    pydocstyle==5.1.1
    pytest-cov==2.10.1
    pytest-xdist[psutil]==2.1.0
    pytest==6.0.1
    sphinx==3.2.1
    sphinx-gallery==0.8.1
    sphinx-panels==0.5.2
    sphinx-rtd-theme==0.5.0
maint =
    rapidfuzz==0.12.2

[pydocstyle]
convention = numpy
match-dir = groupyr