[aliases]
test = pytest

[tool:pytest]
addopts = --doctest-modules

[metadata]
name = groupyr
url = https://richford.github.io/groupyr
download_url = https://github.com/richford/groupyr
author = Adam Richie-Halford
author_email = richiehalford@gmail.com
maintainer = Adam Richie-Halford
maintainer_email = richiehalford@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering

license = BSD License
description = groupyr: Sparse Groups Lasso in Python
long_description = file:README.md
long_description_content_type = text/markdown
platforms = OS Independent

[options]
setup_requires =
  setuptools_scm
python_requires = >=3.6
install_requires =
    copt==0.8.4
    numpy
    scikit-learn>=1.0.0
    scipy
    scikit-optimize==0.9.0
    tqdm
zip_safe = False
include_package_data = True
packages = find:

[options.extras_require]
dev =
    black
    flake8
    matplotlib
    numpydoc
    pre-commit
    pydocstyle
    pytest-cov
    pytest-xdist[psutil]
    pytest
    sphinx
    sphinx-gallery
    sphinx-panels
    sphinx-rtd-theme
    tox
maint =
    rapidfuzz
fda =
    scikit-fda>=0.5
    numba==0.53

all =
    %(fda)s
    %(dev)s
    %(maint)s

[pydocstyle]
convention = numpy
match-dir = groupyr
